src/Asm.MooBank.Web/MooBankApp/src/App.scss
@import "~@andrewmclachlan/mooapp/scss/mooapp.scss";

:root {
    --bs-font-sans-serif: 'Open Sans Condensed', 'Franklin Gothic', Helvetica, Arial, sans-serif;
    --breadcrumb-background: #333;
}

@media (prefers-color-scheme: dark) {
    :root {
        --breadcrumb-background: #1A1919;
    }

    body {
        color-scheme: dark;
    }

    .table {
        --bs-table-striped-bg: rgba(0,0,0,0.5);
    }
}

.light {
    --breadcrumb-background: #CFCCCC;
    color-scheme: light;
    
    .table {
        --bs-table-striped-bg: rgba(0,0,0,0.05);
    }
}

.dark {
    --breadcrumb-background: #1A1919;
    color-scheme: dark;

    .table {
        --bs-table-striped-bg: rgba(0,0,0,0.5);
    }
}

.negative {
    color: rgb(204, 0, 0);
}

.mobile {
    display: none;
}

.desktop {
    display: inline;
}

.alert {
    margin-bottom: 0;
}

.clear {
    clear: both;
}

.breadcrumb {
    --bs-breadcrumb-margin-bottom: 0;
}

.breadcrumb-container {
    font-weight: bold;
    align-items: center;
    background-color: var(--breadcrumb-background);
    margin-bottom: 0.5rem;

    >.container {
        height: 2rem;
        padding-bottom: 2px;
    }
}

nav.control-panel {

    color: #CCCCCC;
    font-weight: bold;

    ul {
        margin: 0;
        padding: 0;
        list-style: none;
        font-size: 0.9rem;
    }

    button,
    button:hover,
    button:active,
    button:focus {
        outline: none;
        background: none;
        border: none;
        font-weight: bold;
        font-size: 0.9rem;
    }

    button:hover {
        text-decoration: underline;
    }

    a,
    button {
        color: #999;
    }

    li {
        display: inline-block;

        padding-left: 0.5rem;

        &:after {
            padding-left: 0.5rem;
            content: "|";
        }

        &:last-child:after {
            content: "";
            padding: 0;
        }
    }
}

/*#region Headings*/
h3,
legend {
    font-size: 1em;
    margin-top: 0;
    font-weight: bold;
}

legend {
    display: none;

}

/*#endregion*/

/*#region Forms*/
input,
select,
textarea {
    font-family: "Open Sans", "Segoe UI", Arial, sans-serif;
}

input.description {
    width: 500px;
}

input[type=submit] {
    color: #FFF;
    background: linear-gradient(to bottom, #111 0%, #3A3A3A 50%, #000 50%, #000 100%);
    border: none;
    border-radius: 5px;
    padding: 5px 20px;
}

/*#endregion*/

/*#region Tables*/

table {
    border-spacing: 0;
}

thead th {
    font-weight: normal;
    font-size: 1.2rem;
}

/*th, td {
    border-bottom: 1px solid #AAA;
}*/

.table {

    

    tfoot {
        /*border-top: 2px double #000;*/
        border-top-style: double;

        td {
            vertical-align: middle;
        }

        button.btn {
            font-weight: bold;
            outline: none;
        }
    }
}

tbody td {
    font-weight: bold;
}

table.accountManagement {
    width: 100%;

    th,
    td {
        text-align: left;
    }

    td {
        padding: 5px 0;
    }

    button {
        background: none;
        border: none;
        cursor: pointer;
    }
}

table.trasactionHistory {
    width: 100%;
}

.row-action {
    vertical-align: middle;
    text-align: center;
}

/*#endregion*/

section.box {
    background-color: #EEE;
    border-radius: 10px;
    padding: 15px;
    font-size: 1.1em;
    margin-bottom: 20px;
    border: none;

    .fieldGroup {
        margin-bottom: 20px;

        &:last-child {
            margin-bottom: 0;
        }

        label {
            display: inline-block;
            width: 150px;
        }
    }

    select,
    input[type=text],
    input[type=number] {
        font-size: 1em;
    }
}

section.actions {
    input[type=submit] {
        font-size: 1.1em;
    }
}

.input-group-prepend {
    font-size: 1.5rem;
    margin-right: 0;
}

fieldset {
    border: 1px solid;
    padding: 10px;
    padding-top: 5px;
    border-radius: 4px;

    legend {
        display: block;
        font-weight: normal;
        font-size: 1.5rem;
        padding: 0 5px;
        margin: 0;
    }
}

input[type=checkbox] {
    margin-right: 5px;
}

table .balance {
    text-align: right;
}

form>div {
    margin-bottom: 1rem;
}

.horizontal-form-controls {
    display: flex;
    align-items: flex-end;
    ;
}

.page-header {
    .container {
        column-gap: 1rem;
    }

    h2 {
        flex-grow: 1;
        text-align: left !important;
    }

}

@import 'responsive';

